# IMEIOwnership

./: .gitmodules  README.md
Contract/: .gitignore  IMEIOwnership.abi.json  README.md  foundry-deps.txt  foundry.toml  install.sh  state.json  test.txt
Contract/script/: IMEIOwnership.s.sol
Contract/src/: IMEICurrency.sol  IMEIOwnership.sol  token.sol
Contract/test/: IMEIOwnership.t.sol
Server/: README.md  pyproject.toml
Server/abi/: IMEICurrency.json  IMEIOwnershipScript.json
Server/server/: function.py  main.py  model.py  trades.json
Server/server/config/: .env  IMEIOwnership.abi.json  config.py
Server/tests/: test.py
webclient/: README.md  package-lock.json  package.json
webclient/src/: App.vue  main.js
webclient/src/api/: api.js
webclient/src/assets/: main.css
webclient/src/composables/: IMEICurrency.abi.json  contract.js  function.js
webclient/src/router/: index.js
webclient/src/views/: BuyingView.vue  HomeView.vue  ItemListView.vue  RegisterView.vue  TradeView.vue  TransferView.vue
